--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <title>React App</title>
   </head>
   <body>
+    <svg width="0" height="0" class="hidden">
+      <defs id="spriteDefs" />
+    </svg>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
